src/app/globals.scss
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: var(--jb-mono), 'JetBrains Mono';
}

html,
body {
  max-width: 100vw;
  overflow: hidden;

  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

a {
  color: inherit;
  text-decoration: none;
}

